--- a/app/views/welcome/about.html.erb
+++ b/app/views/welcome/about.html.erb
@@ -1,2 +1,4 @@
 <h1>About Bloccit</h1>
 <p>Created by: Ashton L.</p>
+
+<%= link_to "Facebook", "https://www.facebook.com/anlevier", class: "social-btn" %>
