--- a/app/views/sponsoredposts/edit.html.erb
+++ b/app/views/sponsoredposts/edit.html.erb
@@ -12,7 +12,7 @@
 	</div>
 
 	<div class="col-md-8">
-		<%= form_for [@sponsoredpost] do |f| %>
+		<%= form_for [@sponsoredpost.topic, @sponsoredpost] do |f| %>
 			<div class="form-group">
 		    	<%= f.label :title %>
 		    	<%= f.text_field :title, class: 'form-control', placeholder: "Enter sponsored post title" %>
