--- a/app/views/sponsoredposts/show.html.erb
+++ b/app/views/sponsoredposts/show.html.erb
@@ -1,5 +1,6 @@
 <h1><%= @sponsoredpost.title %></h1>
   <%= link_to "Edit Sponsored Post", edit_sponsoredpost_path, class: 'btn btn-success' %>
+  <%= link_to "Delete Sponsored Post", @sponsoredpost, method: :delete, class: 'btn btn-danger', data: { confirm: 'Are you sure you want to delete this sponsoredpost?' } %>
 
   <div class="row">
     <div class="col-md-8">
