Assignment 34 complete - topic view not working for sponsored posts

--- a/app/views/topics/index.html.erb
+++ b/app/views/topics/index.html.erb
@@ -18,6 +18,10 @@
 	</div>
 
 	<div class="col-md-4">
-		<%= link_to "New Topic", new_topic_path, cvlass: 'btn btn-success' %>
+		<%= link_to "New Topic", new_topic_path, class: 'btn btn-success' %>
+	</div>
+
+	<div class="col-md-4" style="margin-top: 15px;">
+		<%= link_to "New Sponsored Post", new_sponsoredpost_path, class: 'btn btn-success' %>
 	</div>
 </div>
