--- a/app/views/topics/show.html.erb
+++ b/app/views/topics/show.html.erb
@@ -20,11 +20,31 @@
 		           </small>
 				</div>
 			</div>
+
+			<div class="col-md-4">
+				<%= link_to "New Post", new_topic_post_path(@topic), class: 'btn btn-success' %>
+			</div>
 		<% end %>
 	</div>
 
-	<div class="col-md-4">
-		<%= link_to "New Post", new_topic_post_path(@topic), class: 'btn btn-success' %>
-		<%= link_to "Delete Topic", @topic, method: :delete, class: 'btn btn-danger', data: { confirm: 'Are you sure you want to delete this topic?' } %>
+	<div class="col-md-8">
+		<% @topic.sponsoredposts.each do |sponsoredpost| %>
+			<div class="media">
+				<div class="media-body">
+					<h4 class="media-heading">
+						<%= link_to sponsoredpost.title, topic_sponsoredpost_path(@topic, sponsoredpost) %>
+					</h4>
+
+					<small>
+		             submitted <%= time_ago_in_words(sponsoredpost.created_at) %> ago <br>
+		             <%= sponsoredpost.comments.count %> Comments
+		           </small>
+				</div>
+			</div>
+
+			<div class="col-md-4">
+				<%= link_to "New Sponsored Post", new_topic_sponsoredpost_path(@topic), class: 'btn btn-success' %>
+			</div>
+		<% end %>
 	</div>
 </div>
