--- a/app/views/topics/show.html.erb
+++ b/app/views/topics/show.html.erb
@@ -36,8 +36,7 @@
 					</h4>
 
 					<small>
-		             submitted <%= time_ago_in_words(sponsoredpost.created_at) %> ago <br>
-		             <%= sponsoredpost.comments.count %> Comments
+		             submitted <%= time_ago_in_words(sponsoredpost.created_at) %> ago 
 		           </small>
 				</div>
 			</div>
