--- a/app/views/sponsoredposts/new.html.erb
+++ b/app/views/sponsoredposts/new.html.erb
@@ -11,7 +11,7 @@
   </div>
 
   <div class="col-md-8">
-    <%= form_for @sponsoredpost do |f| %>
+     <%= form_for [@topic, @sponsoredpost] do |f| %>
       <div class="form-group">
         <%= f.label :title %>
         <%= f.text_field :title, class: 'form-control', placeholder: "Enter sponsored post name" %>
