--- a/app/views/topics/index.html.erb
+++ b/app/views/topics/index.html.erb
@@ -2,7 +2,9 @@
 
 <div class="row">
 	<div class="col-md-8">
-		<%= render @topics %>
+		<% @topics.each do |topic| %>
+ 			<%= render topic %>
+ 		<% end %>
 	</div>
 
 	<% if user_is_authorized_for_topics? %>
