--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -27,6 +27,10 @@
   </div>
 
   <div class="form-group">
+    <%= render partial: 'ratings/form', locals: { f: f, rating: post.rating } %>
+  </div>
+
+  <div class="form-group">
     <%= f.submit "Save", class: 'btn btn-success' %>
   </div>
 <% end %>
