--- a/app/views/topics/edit.html.erb
+++ b/app/views/topics/edit.html.erb
@@ -25,6 +25,10 @@
       <div class="form-group">
         <%= render partial: 'labels/form', locals: { f: f, labels: @topic.labels } %>
       </div>
+
+      <div class="form-group">
+        <%= render partial: 'ratings/form', locals: { f: f, rating: @topic.rating } %>
+      </div>
     
       <div class="form-group">
         <%= f.label :public, class: 'checkbox' do %>
