--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -23,8 +23,17 @@
   </div>
 </div>
 
+
 <h2>Posts</h2>
-<%= render @user.posts %>
+<% if user_has_posts? %>
+  <p><%= @user.name %> has not submitted any posts yet.</p>
+<% else %>
+  <%= render @user.posts %>
+<% end %>
 
 <h2>Comments</h2>
-<%= render @user.comments %>
+<% if user_has_comments? %>
+  <p><%= @user.name %> has not submitted any comments yet.</p>
+<% else %>
+  <%= render @user.comments %>
+<% end %>
