--- a/app/views/comments/_form.html.erb
+++ b/app/views/comments/_form.html.erb
@@ -3,8 +3,10 @@
 <%= form_for [post, comment] do |f| %>
 	<div class="form-group">
 		<%= f.label :body, class: 'sr-only' %>
-		<%= f.text_field :body, class: 'form-control', placeholder: "Enter a new comment" %>
+		<%= f.text_field :body, class: 'form-control', placeholder: "Enter a new comment here!" %>
 	</div>
 	
-	<%= f.submit "Submit Comment", class: 'btn btn-default pull-right' %>
+	<div class="form-group">
+		<%= f.submit "Submit Comment", class: 'btn btn-default pull-right' %>
+	</div>
 <% end %>
