--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -16,7 +16,9 @@
         
         <small>
           <%= pluralize(@user.posts.count, 'post') %>,
-          <%= pluralize(@user.comments.count, 'comment') %>
+          <div class='js-comments-count'>
+            <%= pluralize(@user.comments.count, 'comment') %>
+          </div>
         </small>
       </div>
     </div>
