--- a/app/views/comments/_form.html.erb
+++ b/app/views/comments/_form.html.erb
@@ -1,12 +1,11 @@
 <h4>Add a comment</h4>
 
-<%= form_for [post, comment] do |f| %>
+<%= form_for [post, comment], remote: true do |f| %>
 	<div class="form-group">
 		<%= f.label :body, class: 'sr-only' %>
 		<%= f.text_field :body, class: 'form-control', placeholder: "Enter a new comment here!" %>
 	</div>
 	
-	<div class="form-group">
-		<%= f.submit "Submit Comment", class: 'btn btn-default pull-right' %>
-	</div>
+	<%= f.submit "Submit Comment", class: 'btn btn-default pull-right' %>
+	
 <% end %>
