--- a/app/views/comments/_form.html.erb
+++ b/app/views/comments/_form.html.erb
@@ -3,9 +3,10 @@
 <%= form_for [post, comment], remote: true do |f| %>
 	<div class="form-group">
 		<%= f.label :body, class: 'sr-only' %>
-		<%= f.text_field :body, class: 'form-control', placeholder: "Enter a new comment here!" %>
+		<%= f.text_field :body, class: 'form-control', placeholder: "Enter a new comment" %>
 	</div>
 	
 	<%= f.submit "Submit Comment", class: 'btn btn-default pull-right' %>
-	
+
+	<div class="clearfix">
 <% end %>
