fixed favorites URLs on user show

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -54,7 +54,7 @@
         </div>
 
         <div class="col-md-8">
-          <%= link_to favorite.post.title %>
+          <%= link_to favorite.post.title, topic_post_path(favorite.post.topic, favorite.post) %> 
         </div>
       </div>
     <% end %>
