--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -29,7 +29,7 @@
 		</div>
 
 		<% if current_user %>
-			<div class='new-comments'>
+			<div class='new-comment'>
 				<%= render 'comments/form', comment: Comment.new, post: @post %>
 			</div>
 		<% end %>
